<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.arlas</groupId>
    <artifactId>arlas-subscriptions-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>ARLAS subscriptions parent</name>

    <modules>
        <module>arlas-subscriptions-common</module>
        <module>arlas-subscriptions-matcher</module>
        <module>arlas-subscriptions-manager</module>
        <module>arlas-subscriptions-tests</module>

    </modules>

    <properties>
        <!-- PROJECT-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <skipTests>true</skipTests>
        <surefire.version>2.20.1</surefire.version>
        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>

        <!-- LIBRARIES -->
        <cyclops.version>10.3.2</cyclops.version>
        <log4j.version>2.9.1</log4j.version>
        <geojson.jackson.version>1.8.1</geojson.jackson.version>

        <!-- BACKENDS -->
        <elastic.version>6.8.1</elastic.version>
        <kafka.version>2.1.1</kafka.version>
        <arlas.version>11.6.0</arlas.version>

        <!-- REST AND DROPWIZARD-->
        <dropwizard.version>1.3.12</dropwizard.version>
    </properties>

    <repositories>
        <repository>
            <id>gisaia-public</id>
            <url>https://dl.cloudsmith.io/public/gisaia/public/maven</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.dropwizard</groupId>
            <artifactId>dropwizard-core</artifactId>
            <version>${dropwizard.version}</version>
        </dependency>

        <!-- ____________________________________________________ -->
        <!-- LOGS -->
        <!-- ____________________________________________________ -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.20.1</version>
                <configuration>
                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                    <skipITs>${skipTests}</skipITs>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- SUREFIRE LOCK DOWN -->
            <plugin>
                <!-- lock down surefire version -->
                <!-- avoid having to "download all the internet" on each docker build of arlas-subscriptions docker image -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
            </plugin>

        </plugins>
    </build>

</project>
